<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog"
        android:onClick="abrirAlert"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alertdialog_com_itens"
        android:onClick="abrirAlertItens"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/progress_dialog"
        android:onClick="abrirProgress"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date_picker"
        android:onClick="abrirDatePicker"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TimePicker"
        android:onClick="abrirTimeClicker"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_personalizado"
        android:onClick="abrirDialogPersonalizado"/>
</LinearLayout>
